test/fail/lib/Array.mo
// Used in the test of contextual-dots
module {
  public func first<T>(self : [T]) : T {
    self[0]
  };
}
